bugfix and jwt support
